Fix horizontal overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,6 @@ body {
   background-color: white;
   text-align: center;
   position: relative;
-  left: 20%;
   margin: 50px auto;
 }
 
